--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.446.0",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
